消息，新闻，配置接口文档完成
