# docs/swagger.yaml
@@ -418,6 +418,55 @@ definitions:
         description: 标题
         type: string
     type: object
+  message_api.Message:
+    properties:
+      content:
+        description: 消息内容
+        type: string
+      created_at:
+        description: 最新的消息时间
+        type: string
+      message_count:
+        description: 消息条数
+        type: integer
+      rev_user_avatar:
+        type: string
+      rev_user_id:
+        description: 接收人id
+        type: integer
+      rev_user_nick_name:
+        type: string
+      send_user_avatar:
+        type: string
+      send_user_id:
+        description: 发送人id
+        type: integer
+      send_user_nick_name:
+        type: string
+    type: object
+  message_api.MessageRecordRequest:
+    properties:
+      user_id:
+        type: integer
+    required:
+    - user_id
+    type: object
+  message_api.MessageRequest:
+    properties:
+      content:
+        description: 消息内容
+        type: string
+      rev_user_id:
+        description: 接收人id
+        type: integer
+      send_user_id:
+        description: 发送人id
+        type: integer
+    required:
+    - content
+    - rev_user_id
+    - send_user_id
+    type: object
   models.AdvertModel:
     properties:
       created_at:
@@ -622,6 +671,35 @@ definitions:
         description: 文章标题
         type: string
     type: object
+  models.MessageModel:
+    properties:
+      content:
+        description: 消息内容
+        type: string
+      created_at:
+        description: 创建时间
+        type: string
+      id:
+        description: 主键ID
+        type: integer
+      is_read:
+        description: 接收方是否查看
+        type: boolean
+      rev_user_avatar:
+        type: string
+      rev_user_id:
+        description: 接收人id
+        type: integer
+      rev_user_nick_name:
+        type: string
+      send_user_avatar:
+        type: string
+      send_user_id:
+        description: 发送人id
+        type: integer
+      send_user_nick_name:
+        type: string
+    type: object
   models.RemoveRequest:
     properties:
       id_list:
@@ -668,6 +746,17 @@ definitions:
         type: string
       user_name:
         description: 用户名
+        type: string
+    type: object
+  redis_ser.NewData:
+    properties:
+      hotValue:
+        type: string
+      index:
+        type: string
+      link:
+        type: string
+      title:
         type: string
     type: object
   res.ListResponse-article_api_CollResponse:
@@ -732,6 +821,13 @@ definitions:
         type: integer
       list:
         $ref: '#/definitions/models.FullTextModel'
+    type: object
+  res.ListResponse-models_MessageModel:
+    properties:
+      count:
+        type: integer
+      list:
+        $ref: '#/definitions/models.MessageModel'
     type: object
   res.Response:
     properties:
@@ -1578,4 +1674,131 @@ paths:
       summary: 菜单详情
       tags:
       - 菜单管理
+  /api/messages:
+    get:
+      description: 消息列表
+      parameters:
+      - in: query
+        name: key
+        type: string
+      - in: query
+        name: limit
+        type: integer
+      - in: query
+        name: page
+        type: integer
+      - in: query
+        name: sort
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/res.ListResponse-models_MessageModel'
+              type: object
+      summary: 消息列表
+      tags:
+      - 消息管理
+    post:
+      description: 发布消息
+      parameters:
+      - description: 查询参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/message_api.MessageRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  type: string
+              type: object
+      summary: 发布消息
+      tags:
+      - 消息管理
+  /api/messages_record:
+    post:
+      description: 用户的消息记录
+      parameters:
+      - description: 查询参数
+        in: body
+        name: data
+        required: true
+        schema:
+          $ref: '#/definitions/message_api.MessageRecordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/models.MessageModel'
+                  type: array
+              type: object
+      summary: 用户的消息记录
+      tags:
+      - 消息管理
+  /api/news:
+    post:
+      description: 新闻列表
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/res.Response'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/redis_ser.NewData'
+                  type: array
+              type: object
+      summary: 新闻列表
+      tags:
+      - 新闻管理
+  /api/settings/:name:
+    get:
+      description: 显示某一项的配置信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 显示某一项的配置信息
+      tags:
+      - 系统管理
+    put:
+      description: 修改某一项的配置信息
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/res.Response'
+      summary: 修改某一项的配置信息
+      tags:
+      - 系统管理
 swagger: "2.0"
