# routers/message_router.go
@@ -10,5 +10,5 @@ func (router RouterGroup) MessageRouter() {
 	router.POST("messages", app.MessageCreateView)
 	router.GET("messages_all", app.MessageListAllView)
 	router.GET("messages", middleware.JwtAuth(), app.MessageListView)
-	router.GET("messages_record", middleware.JwtAuth(), app.MessageRecordView)
+	router.POST("messages_record", middleware.JwtAuth(), app.MessageRecordView)
 }
